fix logo cutting off in landscape on mobile

--- a/tip-calculator-app/style.css
+++ b/tip-calculator-app/style.css
@@ -58,6 +58,10 @@ h6 {
   --btn-border-radius: 4px;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: var(--font-body);
   background-color: var(--clr-cyan-light);
@@ -213,7 +217,7 @@ input:focus-visible {
   body {
     display: grid;
     place-content: center;
-    height: 100vh;
+    /* height: 100vh; */
   }
 
   main {
@@ -222,7 +226,7 @@ input:focus-visible {
   }
 
   .logo {
-    margin-top: 0;
+    /* margin-top: 0; */
     margin-bottom: 4rem;
   }
 
